# pypjrt

./: .gitignore  README.md  SUPPORT.md  local-ci.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_hello.py  02_plugin_and_devices.py  03_producers_and_artifacts.py  04_interop_dlpack.py  05_multi_device.py  06_training_loop.py  07_artifacts_and_cache.py  08_custom_kernel.py  09_gpu_kernels.py  10_async_and_futures.py  README.md  run_all.py
spike/: bench_async.py  ffibench.py  pjrt_e2e.py  pjrt_ffi.py  tpu_gate_aot.py  tpu_gate_collective.py
src/pypjrt/: __init__.py  _loader.py  _lock.py  artifact.py  cache.py  client.py  compile_options.py  conform.py  cuda.py  dlpack.py  errors.py  extensions.py  kv.py  session.py  topology.py  transfer.py  triton.py  typing.py
src/pypjrt/_abi/: __init__.py  pjrt_0_114.py
src/pypjrt/ffi/: __init__.py  frame.py  registry.py
tests/: conftest.py
tests/data/: triton_double.mlir
tests/must_fail/: README.md  dtype_marker_instantiation_must_fail.py  dtype_mismatch_must_fail.py  non_dtype_parameter_must_fail.py  wrong_handle_kind_must_fail.py
tests/tier0_host/: test_abi.py  test_artifact.py  test_conform.py  test_cuda.py  test_diagnostics.py  test_discovery.py  test_dtypes.py  test_examples.py  test_ffi_frame.py  test_kv.py  test_must_fail.py  test_no_dead_modules.py
tests/tier1_cpu/: test_conform_cpu.py  test_coverage_sweep.py  test_dtypes_and_artifacts.py  test_e2e.py  test_jax_differential.py  test_m1_diagnostics.py  test_m4_artifacts.py  test_m5_session.py  test_m6_ffi.py  test_m7_dlpack.py  test_m8_collectives.py  test_m9_async.py  test_memory_spaces.py  test_multi_device.py  test_topology.py  test_transfer_and_extensions.py
tests/tier2_gpu/: test_conform_gate.py  test_cuda_launch.py  test_m1_gate.py  test_m4_abi_guard.py  test_m6_ffi_gpu.py  test_m7_dlpack_gpu.py  test_m8_multiprocess.py  test_m9_async_gpu.py  test_stream_ext.py  test_triton.py
tools/: gen_abi.py  gen_support_matrix.py
