[project]
name = "pypjrt"
version = "0.1.1"
description = "A dependency-free Python client for the PJRT C API and the XLA FFI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Pedro N. Rodriguez", email = "pnrodriguezh@gmail.com" }]
keywords = ["pjrt", "xla", "stablehlo", "openxla", "jax", "tpu", "gpu", "ffi", "dlpack", "ctypes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Hardware",
  "Typing :: Typed",
]
# The core imports nothing. This is load-bearing, not aspirational: the whole
# point is that being a PJRT-calling framework costs a pure-Python wheel.
dependencies = []

[project.optional-dependencies]
# jax is a StableHLO *producer* and a differential oracle in tests. Never required.
jax = ["jax>=0.10"]
numpy = ["numpy", "ml_dtypes"]
dev = ["libclang", "pytest>=8", "pyright>=1.1.380", "jax>=0.10", "numpy"]

[project.urls]
Homepage = "https://github.com/pedronahum/pypjrt"
Repository = "https://github.com/pedronahum/pypjrt"
Issues = "https://github.com/pedronahum/pypjrt/issues"
Examples = "https://github.com/pedronahum/pypjrt/tree/main/examples"

[project.scripts]
pypjrt-conform = "pypjrt.conform:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypjrt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "tier0: host-only, needs no plugin",
  "tier1: needs a CPU PJRT plugin",
  "tier2: needs a GPU PJRT plugin",
]
# Skips are failures unless waived by name. -r a reports every
# skip reason so a silently-green suite is impossible.
addopts = "-ra --strict-markers"

[tool.pyright]
# must_fail/ is intentionally NOT in `include`: those files exist to be
# rejected, so they must not fail the default run. They are still analyzable
# when named explicitly, which is how tests/tier0_host/test_must_fail.py
# enforces them. `exclude` would suppress them even then.
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
